penjat mode text funciona

--- a/penjat.html
+++ b/penjat.html
@@ -13,7 +13,7 @@
     <div>
         <div class="btn">
             <button class="iniciar" onclick="novaPartida()">Iniciar partida</button>
-            <button class="estadisticas">Estadístiques</button>
+            <button class="estadisticas" onclick="mostraEstadistica()">Estadístiques</button>
         </div>
     </div>
 </body>
