commit cambios graphic

--- a/penjat.html
+++ b/penjat.html
@@ -10,11 +10,17 @@
     <div id="header">
         <h1 id="titol">Joc del penjat</h1>
     </div>
-    <div>
+    <div id="container">
         <div class="btn">
             <button class="iniciar" onclick="novaPartida()">Iniciar partida</button>
             <button class="estadisticas" onclick="mostraEstadistica()">Estadístiques</button>
+            <button class="reseteja" onclick="reset()">Neteja estadístiques</button>
         </div>
+        <div id="jocPenjat">           
+        </div>
+        <img src="" id=""imatgePenjat />
+        <div id="abecedari"></div>
+        <div id="lletresUtilitzades"></div>
     </div>
 </body>
 </html>
